# napolab

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVALUATION.md  LICENSE  README.md  demo.py  napolab.py  pyproject.toml  test.py
leaderboard/: README.md  app.py  config.py  data.yaml  data_loader.py  download_external_models.py  example_usage.py  external_models.csv  extract_portuguese_leaderboard.py  manage_data.py  portuguese_leaderboard.csv  requirements.txt  run_app.py  validate_data.py
src/napolab/: __init__.py  __main__.py  napolab.py
src/napolab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
